--- a/GubGlitch-app.vcxproj
+++ b/GubGlitch-app.vcxproj
@@ -281,6 +281,7 @@
     <ClInclude Include="GubGlitch.h" />
     <ClInclude Include="Oscillator.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="Stutter.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\ASIO_SDK\asio.cpp" />
@@ -293,6 +294,7 @@
     <ClCompile Include="app_wrapper\app_main.cpp" />
     <ClCompile Include="GubGlitch.cpp" />
     <ClCompile Include="Oscillator.cpp" />
+    <ClCompile Include="Stutter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GubGlitch.rc" />
