--- a/GubGlitch-app.vcxproj.filters
+++ b/GubGlitch-app.vcxproj.filters
@@ -49,6 +49,7 @@
     </ClInclude>
     <ClInclude Include="app_wrapper\app_resource.h" />
     <ClInclude Include="Oscillator.h" />
+    <ClInclude Include="Stutter.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\WDL\rtaudiomidi\RtAudio.cpp">
@@ -77,6 +78,7 @@
       <Filter>app</Filter>
     </ClCompile>
     <ClCompile Include="Oscillator.cpp" />
+    <ClCompile Include="Stutter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GubGlitch.rc" />
