--- a/GubGlitch-vst2.vcxproj
+++ b/GubGlitch-vst2.vcxproj
@@ -240,11 +240,13 @@
     <ClInclude Include="GubGlitch.h" />
     <ClInclude Include="Oscillator.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="Stutter.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\WDL\IPlug\IPlugVST.cpp" />
     <ClCompile Include="GubGlitch.cpp" />
     <ClCompile Include="Oscillator.cpp" />
+    <ClCompile Include="Stutter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GubGlitch.rc" />
