--- a/GubGlitch-vst2.vcxproj.filters
+++ b/GubGlitch-vst2.vcxproj.filters
@@ -6,6 +6,7 @@
       <Filter>vst2</Filter>
     </ClCompile>
     <ClCompile Include="Oscillator.cpp" />
+    <ClCompile Include="Stutter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GubGlitch.h" />
@@ -14,6 +15,7 @@
       <Filter>vst2</Filter>
     </ClInclude>
     <ClInclude Include="Oscillator.h" />
+    <ClInclude Include="Stutter.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GubGlitch.rc" />
