--- a/GubGlitch-aax.vcxproj.filters
+++ b/GubGlitch-aax.vcxproj.filters
@@ -55,7 +55,7 @@
     <ClCompile Include="..\..\AAX_SDK\Interfaces\AAX_Exports.cpp">
       <Filter>Libs</Filter>
     </ClCompile>
-    <ClCompile Include="Oscillator.cpp" />
+    <ClCompile Include="Chopper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\WDL\IPlug\Containers.h">
@@ -114,7 +114,7 @@
     </ClInclude>
     <ClInclude Include="GubGlitch.h" />
     <ClInclude Include="resource.h" />
-    <ClInclude Include="Oscillator.h" />
+    <ClInclude Include="Chopper.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GubGlitch.rc" />
