--- a/GubGlitch-app.vcxproj
+++ b/GubGlitch-app.vcxproj
@@ -279,7 +279,7 @@
     <ClInclude Include="app_wrapper\app_main.h" />
     <ClInclude Include="app_wrapper\app_resource.h" />
     <ClInclude Include="GubGlitch.h" />
-    <ClInclude Include="Oscillator.h" />
+    <ClInclude Include="Chopper.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Stutter.h" />
   </ItemGroup>
@@ -293,7 +293,7 @@
     <ClCompile Include="app_wrapper\app_dialog.cpp" />
     <ClCompile Include="app_wrapper\app_main.cpp" />
     <ClCompile Include="GubGlitch.cpp" />
-    <ClCompile Include="Oscillator.cpp" />
+    <ClCompile Include="Chopper.cpp" />
     <ClCompile Include="Stutter.cpp" />
   </ItemGroup>
   <ItemGroup>
