--- a/GubGlitch-app.vcxproj.filters
+++ b/GubGlitch-app.vcxproj.filters
@@ -48,8 +48,8 @@
       <Filter>app</Filter>
     </ClInclude>
     <ClInclude Include="app_wrapper\app_resource.h" />
-    <ClInclude Include="Oscillator.h" />
     <ClInclude Include="Stutter.h" />
+    <ClInclude Include="Chopper.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\WDL\rtaudiomidi\RtAudio.cpp">
@@ -77,8 +77,8 @@
     <ClCompile Include="..\..\WDL\IPlug\IPlugStandalone.cpp">
       <Filter>app</Filter>
     </ClCompile>
-    <ClCompile Include="Oscillator.cpp" />
     <ClCompile Include="Stutter.cpp" />
+    <ClCompile Include="Chopper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GubGlitch.rc" />
