--- a/GubGlitch-rtas.vcxproj
+++ b/GubGlitch-rtas.vcxproj
@@ -304,8 +304,8 @@ copy /Y "$(TargetPath)".rsr "$(RTAS_PLUGINS_PATH)\$(BINARY_NAME).dpm.rsr"
     <ClInclude Include="..\..\WDL\IPlug\RTAS\IPlugProcessRTAS.h" />
     <ClInclude Include="..\..\WDL\IPlug\RTAS\ProcessInterface.h" />
     <ClInclude Include="..\..\WDL\IPlug\RTAS\digicode.h" />
+    <ClInclude Include="Chopper.h" />
     <ClInclude Include="GubGlitch.h" />
-    <ClInclude Include="Oscillator.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
@@ -328,8 +328,8 @@ copy /Y "$(TargetPath)".rsr "$(RTAS_PLUGINS_PATH)\$(BINARY_NAME).dpm.rsr"
     <ClCompile Include="..\..\WDL\IPlug\RTAS\digicode1.cpp" />
     <ClCompile Include="..\..\WDL\IPlug\RTAS\digicode2.cpp" />
     <ClCompile Include="..\..\WDL\IPlug\RTAS\digicode3.cpp" />
+    <ClCompile Include="Chopper.cpp" />
     <ClCompile Include="GubGlitch.cpp" />
-    <ClCompile Include="Oscillator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="GubGlitch-rtas.def" />
