--- a/GubGlitch-rtas.vcxproj.filters
+++ b/GubGlitch-rtas.vcxproj.filters
@@ -118,7 +118,7 @@
     <ClInclude Include="..\..\WDL\IPlug\RTAS\IPlugProcessAS.h">
       <Filter>IPlug\RTAS</Filter>
     </ClInclude>
-    <ClInclude Include="Oscillator.h" />
+    <ClInclude Include="Chopper.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\WDL\IPlug\Hosts.cpp">
@@ -179,7 +179,7 @@
     <ClCompile Include="..\..\WDL\IPlug\RTAS\IPlugProcessAS.cpp">
       <Filter>IPlug\RTAS</Filter>
     </ClCompile>
-    <ClCompile Include="Oscillator.cpp" />
+    <ClCompile Include="Chopper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="GubGlitch-rtas.def" />
