--- a/GubGlitch-vst2.vcxproj
+++ b/GubGlitch-vst2.vcxproj
@@ -237,15 +237,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\..\WDL\IPlug\IPlugVST.h" />
+    <ClInclude Include="Chopper.h" />
     <ClInclude Include="GubGlitch.h" />
-    <ClInclude Include="Oscillator.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Stutter.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\WDL\IPlug\IPlugVST.cpp" />
+    <ClCompile Include="Chopper.cpp" />
     <ClCompile Include="GubGlitch.cpp" />
-    <ClCompile Include="Oscillator.cpp" />
     <ClCompile Include="Stutter.cpp" />
   </ItemGroup>
   <ItemGroup>
