--- a/GubGlitch-vst3.vcxproj.filters
+++ b/GubGlitch-vst3.vcxproj.filters
@@ -47,7 +47,7 @@
     <ClCompile Include="..\..\VST3_SDK\pluginterfaces\base\coreiids.cpp">
       <Filter>vst3\VST3SDK\pluginterfaces\base</Filter>
     </ClCompile>
-    <ClCompile Include="Oscillator.cpp" />
+    <ClCompile Include="Chopper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GubGlitch.h" />
@@ -193,7 +193,7 @@
     <ClInclude Include="..\..\VST3_SDK\pluginterfaces\base\ucolorspec.h">
       <Filter>vst3\VST3SDK\pluginterfaces\base</Filter>
     </ClInclude>
-    <ClInclude Include="Oscillator.h" />
+    <ClInclude Include="Chopper.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="vst3">
