--- a/GubGlitch-vst2.vcxproj
+++ b/GubGlitch-vst2.vcxproj
@@ -239,6 +239,7 @@
     <ClInclude Include="..\..\WDL\IPlug\IPlugVST.h" />
     <ClInclude Include="Chopper.h" />
     <ClInclude Include="GubGlitch.h" />
+    <ClInclude Include="MIDIManager.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Stutter.h" />
   </ItemGroup>
@@ -246,6 +247,7 @@
     <ClCompile Include="..\..\WDL\IPlug\IPlugVST.cpp" />
     <ClCompile Include="Chopper.cpp" />
     <ClCompile Include="GubGlitch.cpp" />
+    <ClCompile Include="MIDIManager.cpp" />
     <ClCompile Include="Stutter.cpp" />
   </ItemGroup>
   <ItemGroup>
